# math-code

./: .buildinfo  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: math-code.yml
_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/.doctrees/: environment.pickle  index.doctree
_build/_sources/: index.rst
_build/_static/: style.css
_sources/: index.rst
_static/: documentation_options.js
docs/: conf.py  index.rst
docs/_static/: style.css
notebooks/differentiable-programming/: differentiation copy.html  differentiation.html
notebooks/linear-algebra/: linear-algebra.html  linear-algebra.ipynb
notes/Algoritmo de Prim/: AlgoritmoPrim.ipynb  graphs.py
notes/Calculator.LinAlg.Owner/: LinAlg.ipynb
notes/Combinatoria/: TotalFunciones.ipynb
notes/Criptography/: 01_introduction_to_python_and_programming.ipynb  02_iteration_and_looping.ipynb
notes/Estructuras del poder y teoría de conjuntos/: Teoría de conjuntos y procesos electorales.ipynb
notes/Forma Canónica de Jordan/: diagonalization.ipynb  eigens.ipynb  formcanonicaljordan.ipynb  generalizedeigens.ipynb
notes/Galois/: Aritmética modular con Python.ipynb
notes/Geometría de incidencia/: GeometriaIncidencia.ipynb
notes/Gradiente descendente/: ElGradienteDescendente.ipynb
notes/Jugando con el gradiente descendente/: ElGradienteDescendente.ipynb
notes/MIU/: MIU.ipynb
notes/Regresión Logística/: Regresión Logística.ipynb
(+14 files in other folders)
