[tool.poetry]
name = "math-code"
version = "0.1.0"
description = ""
authors = ["Alejandro Sánchez Yalí <asanchezyali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pip-tools = "^7.4.1"
pip-review = "^1.3.0"
pip-upgrader = "^1.4.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
