[tool.poetry]
name = "math-code"
version = "0.1.0"
description = ""
authors = ["Alejandro Sánchez Yalí <asanchezyali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pip-tools = "^7.4.1"
pip-review = "^1.3.0"
pip-upgrader = "^1.4.15"
sphinx = "7.2.6"
sphinx-rtd-theme = "2.0.0"
readthedocs-sphinx-ext = "^2.2.5"
nbsphinx = "0.9.3"
ipython = "^8.23.0"
pygments = "2.17.2"
sphinxcontrib-bibtex = ">=2.1"
sphinxcontrib-svg2pdfconverter = "^1.2.2"
sphinx-gallery = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
